[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
diesel = { version = "2.0.4", features = ["postgres"] }
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
