[package]
name = "wire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
lib0 = { path = "../../y-crdt/lib0/" }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
uuid = { version = "1.3.2", features = ["js", "v4"] }
yrs_wrappers = { path = "../yrs_wrappers" }
yrs = { path = "../../y-crdt/yrs/"}
comparable = { version = "0.5.4", features = ["derive"] }
