[package]
name = "yrs-indexeddb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
indexed_db_futures = { path = "../../rust-indexed-db" }
js-sys = "0.3.65"
tap = "1.0.1"
wasm-bindgen-test = "0.3.38"
web-sys = { version = "0.3.65", features = ["console"] }
yrs = "0.17.1"
yrs-kvstore-async = { path = "../yrs-kvstore-async" }

[dev-dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
