[package]
name = "yrs-kvstore-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
pin-project = "1.1.3"
smallvec = { version = "1.11.2", features = ["write"] }
yrs = "0.17.1"
