[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.17", features = ["macros"] }
axum-typed-websockets = "0.5.0"
diesel = { version = "2.0.4", features = ["postgres"] }
futures = "0.3.28"
once_cell = "1.17.1"
parking_lot = "0.12.1"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
yrs = "0.16.5"
