[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.2.5", features = ["tracing"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
web-sys = {version = "*", features = ["HtmlElement", "DomRect", "Element"] }
wire = { path = "../wire" }

# [[package.metadata.leptos]]
# bin-features = []
