[package]
name = "yrs_wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
derive_more = "0.99.17"
lib0 = "0.16.5"
thiserror = "1.0.40"
uuid = "1.3.3"
yrs = "0.16.5"
yrs_struct_derive = { path = "../yrs_struct_derive" }
